# framer

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/agents/: correctness-reviewer.md  rust-quality-reviewer.md  spec-consistency-reviewer.md  test-coverage-reviewer.md
.claude/commands/: pr-review.md  spec-review.md
.claude/skills/install-app/: SKILL.md
.claude/skills/ui-shots/: SKILL.md
.codex/skills/framer-commit/: SKILL.md
.codex/skills/framer-commit/agents/: openai.yaml
.codex/skills/framer-development/: SKILL.md
.codex/skills/framer-development/agents/: openai.yaml
.codex/skills/ui-shots/: SKILL.md
.codex/skills/ui-shots/agents/: openai.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-pr-review-command.yml  claude.yml  release.yml
crates/framer-analysis/: Cargo.toml  README.md
crates/framer-analysis/src/: compile.rs  graph.rs  identity.rs  intent.rs  lib.rs  lower.rs  patch.rs  query.rs  resolution.rs  revision.rs
crates/framer-app/: Cargo.toml  README.md
crates/framer-app/src/: app_config.rs  main.rs
crates/framer-app/src/app/: actions.rs  component_visibility.rs  context_menu.rs  draw_wall.rs  history.rs  history_integration_tests.rs  labels.rs  mod.rs  model_edit.rs  panels.rs  project_io.rs  render_job.rs  resolution.rs  theme.rs  ui_harness_tests.rs  ui_shots_tests.rs  viewport.rs
crates/framer-app/src/app/design/: icons.rs  mod.rs  palette.rs  tokens.rs  widgets.rs
crates/framer-app/src/app/render/: blit.wgsl  denoise.wgsl  mod.rs  pathtrace.wgsl  rng.wgsl  rng_debug.wgsl
crates/framer-app/src/app/viewport/: axonometric.rs  camera_2d.rs  camera_3d.rs  deferred.rs  elevation_design.rs  elevation_dimensions.rs  elevation_framing.rs  elevation_openings.rs  geom.rs  gpu.rs  layout.rs  mod.rs  pane.rs  pane_view.rs  plan.rs  render.rs  scene_build.rs  view_common.rs  view_cube.rs  workspace_state.rs
crates/framer-app/src/app/viewport/scene_build/: members.rs  mod.rs  picking.rs  style.rs  surfaces.rs  tests.rs  walls.rs
crates/framer-app/tests/: gpu_parity.rs
crates/framer-core/: Cargo.toml  README.md
crates/framer-core/src/: constraints.rs  intent.rs  lib.rs  library.rs  model.rs  project.rs  standards.rs  topology.rs  units.rs
crates/framer-geometry/: Cargo.toml  README.md
crates/framer-geometry/src/: audit.rs  diagnostic.rs  lib.rs  query.rs  solid.rs  spatial.rs
crates/framer-geometry/src/audit/: tests.rs
crates/framer-geometry/tests/: examples.rs
crates/framer-library/: Cargo.toml
crates/framer-library/src/: lib.rs
crates/framer-render/: Cargo.toml  README.md  test_detailed_analysis  test_detailed_analysis.rs
crates/framer-render/src/: aabb.rs  build.rs  bvh.rs  camera.rs  color.rs  geom.rs  gpu.rs  integrator.rs  lib.rs  material.rs  ray.rs  rng.rs  sampling.rs  scene.rs  scenes.rs  test_zero_ray_bug.rs
crates/framer-render/src/math/: mod.rs  onb.rs  vec3.rs
crates/framer-render/tests/: cli.rs  golden.rs
crates/framer-render/tests/golden/: hip-roof.rgba  reference.rgba  roofed.rgba  scissor.rgba
crates/framer-solver/: Cargo.toml  README.md
crates/framer-solver/src/: lib.rs
crates/framer-standards/: Cargo.toml
crates/framer-standards/src/: lib.rs
docs/: architecture.md  code-map.md  project-files.md  spec-driven-development.md  vision.md
docs/plans/: 2026-05-21-phase-1.md  2026-06-15-design-system-design.md  2026-06-15-gpu-pathtracer-research.md  2026-06-15-render-view-mode-design.md  2026-06-15-render-view-mode.md  2026-06-17-undo-redo-design.md  2026-06-18-2d-view-camera-design.md  2026-06-18-viewport-module-refactor.md  2026-06-18-wall-editing-snapping-design.md  2026-06-18-wall-editing-snapping.md  2026-06-18-walls-and-rooms-design.md  2026-06-19-libraries.md  2026-06-19-visual-layering.md  2026-06-20-ceilings-and-roofs.md  2026-06-23-ceilings-and-roofs-v2.md  2026-07-03-command-surfaces.md  2026-07-04-active-level-drafting.md  2026-07-04-standards-engine.md  2026-07-05-level-filtered-regions.md  2026-07-07-ui-ux-hardening.md  2026-07-08-view-workflow-alignment.md  2026-07-09-app-configuration.md  2026-07-09-roof-overhangs-framing-gable-walls.md  2026-07-10-geometry-overlap-audit.md  2026-07-10-rafter-cuts.md  2026-07-10-sustainable-viewport-architecture.md  2026-07-10-wall-corner-laps.md  2026-07-12-component-visibility-and-isolation.md  2026-07-13-viewport-context-menus.md  2026-07-14-tiled-viewport-workspaces.md  2026-07-15-intent-model-and-resolution.md  2026-07-16-header-span-calculation-research.md  2026-07-16-illustrative-standards-reset.md  README.md
docs/specs/: 2d-view-camera.md  README.md  app-configuration.md  build-and-ci.md  ceilings-and-roofs.md  command-surfaces.md  component-visibility-and-isolation.md  construction-systems.md  design-system.md  geometry-overlap-audit.md  intent-model-and-resolution.md  libraries.md  render-view.md  standards-engine.md  undo-redo.md  view-layers.md  viewport-layouts.md  wall-corner-laps.md  wall-editing-and-snapping.md  walls-and-rooms.md
docs/templates/: plan-template.md  spec-template.md
examples/projects/: demo-shell.framer  demo-two-bedroom.framer  demo-wall.framer
libraries/: framer-starter.framerlib
scripts/: check-markdown-links.py  install-app.sh  ui-shots.sh
