[workspace]
members = [
    "crates/framer-app",
    "crates/framer-core",
    "crates/framer-solver",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"

[workspace.dependencies]
eframe = "0.34.2"
env_logger = "0.11.8"
framer-core = { path = "crates/framer-core" }
framer-solver = { path = "crates/framer-solver" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
