[workspace]
members = [
    "crates/framer-app",
    "crates/framer-core",
    "crates/framer-geometry",
    "crates/framer-library",
    "crates/framer-render",
    "crates/framer-solver",
    "crates/framer-standards",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"

[workspace.dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
blake3 = "=1.8.5"
clap = "4.6.1"
config = { version = "0.15.25", default-features = false, features = ["toml"] }
eframe = "0.35.0"
earcutr = "0.5.0"
env_logger = "0.11.8"
framer-core = { path = "crates/framer-core" }
framer-geometry = { path = "crates/framer-geometry" }
framer-library = { path = "crates/framer-library" }
framer-render = { path = "crates/framer-render" }
framer-solver = { path = "crates/framer-solver" }
framer-standards = { path = "crates/framer-standards" }
image = { version = "0.25.10", default-features = false, features = ["png"] }
pollster = "0.4.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
url = "2.5.8"
