[package]
name = "framer-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
framer-core.workspace = true
framer-geometry.workspace = true
framer-library.workspace = true
framer-solver.workspace = true
framer-standards.workspace = true
thiserror.workspace = true
