[package]
name = "framer-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck.workspace = true
eframe.workspace = true
env_logger.workspace = true
framer-core.workspace = true
framer-render = { workspace = true, features = ["parallel"] }
framer-solver.workspace = true

[dev-dependencies]
pollster.workspace = true
