[package]
name = "framer-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck.workspace = true
eframe.workspace = true
env_logger.workspace = true
framer-core.workspace = true
framer-library.workspace = true
framer-render = { workspace = true, features = ["parallel"] }
framer-solver.workspace = true

# Default (no) features: the headless UI tests drive the app through the
# AccessKit tree only — no wgpu rendering or image snapshots — which keeps the
# dev-build lean and the harness deterministic across platforms.
[dev-dependencies]
egui_kittest = "0.35"
pollster.workspace = true
